riosdevida-web/src/main/jkube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: riosdevida-web-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /riosdevida-web
spec:
  rules:
    - http:
        paths:
          - path: /riosdevida-web
            pathType: Prefix
            backend:
              service:
                name: riosdevida-web
                port:
                  number: 8080
